News UAT/force-app/main/default/objects/Business_Announcement__c/Business_Announcement__c.object-meta.xml
<CustomObject>
    <label>Business Announcement</label>
    <nameField>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>