News UAT/force-app/main/default/objects/Business_Announcement__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <label>Announcement</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>