News UAT/force-app/main/default/objects/Business_Announcement__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <inlineHelpText>Ensure all text is on a single line. Do not include any line breaks, or else the text will not show properly on the home page.</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>