News UAT/force-app/main/default/objects/Business_Announcement__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <label>Display</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticker</fullName>
            </value>
            <value>
                <fullName>Pop-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>