News UAT/force-app/main/default/objects/Business_Announcement__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Published</label>
    <type>Date</type>
</CustomField>