News UAT/force-app/main/default/objects/Business_Announcement__c/validationRules/Order_cant_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_cant_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Order__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Order value cannot be negative</errorMessage>
</ValidationRule>