News UAT/force-app/main/default/objects/Business_Announcement__c/listViews/Latest_Business_Announcements.listView-meta.xml
<ListView>
    <fullName>Latest_Business_Announcements</fullName>
    <columns>NAME</columns>
    <columns>Content__c</columns>
    <filterScope>Mine</filterScope>
    <label>Latest Business Announcements</label>
</ListView>